tests/error/type_match/if_expr_ambiguous_types.bz
function test(b: bool)
{
	let _ = if (b) {
		0
	} else {
		1i16
	};
}
